Update Configuration and Documentation for Environment Variables and Secrets Management - This commit enhances the project's configuration by replacing hardcoded database credentials in the Docker Compose file with environment variable references. Additionally, a new  file is introduced to guide users in setting up their environment variables securely. The  file is updated to exclude sensitive files, and comprehensive documentation on secrets management is added to ensure best practices are followed. All relevant tests have been executed successfully, confirming no regressions and maintaining high code quality standards.

--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,26 @@ cj_essay_assessment/
 cj_ai_essay_assessment/*.xml
 /*.xml
 
+# Service data directories
+services/spell_checker_service/data/corrected_essays
+data/corrected_essays
+test_uploads/
+
+# Local development stores and caches
+.local_*
+services/*/.local_*
+.pdm-build/
+services/*/.pdm-build/
+
+# Coverage and test artifacts
+.coverage
+coverage.xml
+htmlcov/
+
+# Service-specific temporary files
+services/*/logs/
+services/*/tmp/
+*.log
+*.pid
+
 .DS_Store
