--- a/pyproject.toml
+++ b/pyproject.toml
@@ -228,6 +228,7 @@ markers = [
     "docker: marks tests that need docker-compose setup",
     "kafka: marks tests requiring a Kafka instance",
     "e2e: marks tests as end-to-end pipeline tests",
+    "functional: marks functional tests that verify cross-service behavior",
     "timeout: marks tests with specific timeout requirements",
 ]
 
