--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -211,6 +211,7 @@ services:
       - CONTENT_SERVICE_URL=http://content_service:8000/v1/content
       - LOG_LEVEL=DEBUG
       - HTTP_PORT=8002
+      - SPELL_CHECKER_SERVICE_REDIS_URL=redis://redis:6379
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8002/healthz || exit 1"]
       interval: 15s
@@ -245,6 +246,7 @@ services:
       - CONTENT_SERVICE_URL=http://content_service:8000/v1/content
       - BATCH_ORCHESTRATOR_SERVICE_PORT=5000
       - LOG_LEVEL=INFO
+      - BATCH_ORCHESTRATOR_SERVICE_REDIS_URL=redis://redis:6379
       # Database configuration
       - BATCH_ORCHESTRATOR_DB_HOST=batch_orchestrator_db
       - BATCH_ORCHESTRATOR_DB_PORT=5432
@@ -297,6 +299,7 @@ services:
       - ELS_DB_USER=${HULEEDU_DB_USER}
       - ELS_DB_PASSWORD=${HULEEDU_DB_PASSWORD}
       - LOG_LEVEL=INFO
+      - ESSAY_LIFECYCLE_SERVICE_REDIS_URL=redis://redis:6379
     volumes:
       - essay_lifecycle_data:/data/essay_lifecycle
     healthcheck:
@@ -340,6 +343,7 @@ services:
       - ELS_DB_USER=${HULEEDU_DB_USER}
       - ELS_DB_PASSWORD=${HULEEDU_DB_PASSWORD}
       - LOG_LEVEL=INFO
+      - ESSAY_LIFECYCLE_SERVICE_REDIS_URL=redis://redis:6379
     volumes:
       - essay_lifecycle_data:/data/essay_lifecycle
     # Note: essay_lifecycle_worker is a worker service, no health check needed
@@ -400,6 +404,7 @@ services:
       - CJ_ASSESSMENT_SERVICE_CONTENT_SERVICE_URL=http://content_service:8000/v1/content
       - CJ_ASSESSMENT_SERVICE_LOG_LEVEL=INFO
       - CJ_ASSESSMENT_SERVICE_METRICS_PORT=9090
+      - CJ_ASSESSMENT_SERVICE_REDIS_URL=redis://redis:6379
       # Database configuration
       - CJ_ASSESSMENT_SERVICE_DATABASE_URL_CJ=postgresql+asyncpg://${HULEEDU_DB_USER}:${HULEEDU_DB_PASSWORD}@cj_assessment_db:5432/cj_assessment
       # Testing configuration
