--- a/docker-compose.services.yml
+++ b/docker-compose.services.yml
@@ -53,6 +53,33 @@ services:
       retries: 3
       start_period: 20s
 
+  batch_conductor_service:
+    build:
+      context: .
+      dockerfile: services/batch_conductor_service/Dockerfile
+    container_name: huleedu_batch_conductor_service
+    restart: unless-stopped
+    depends_on:
+      kafka_topic_setup:
+        condition: service_completed_successfully
+      redis:
+        condition: service_healthy
+    networks:
+      - huleedu_internal_network
+    ports:
+      - "4002:4002"
+    environment:
+      - ENV_TYPE=docker
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - LOG_LEVEL=INFO
+      - HTTP_PORT=4002
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:4002/healthz || exit 1"]
+      interval: 15s
+      timeout: 5s
+      retries: 3
+      start_period: 20s
+
   spell_checker_service:
     build:
       context: .
