--- a/services/batch_conductor_service/pyproject.toml
+++ b/services/batch_conductor_service/pyproject.toml
@@ -6,27 +6,32 @@ authors = [
     { name = "HuleEdu Team", email = "dev@huleedu.com" }
 ]
 dependencies = [
-    "quart>=0.19.4",
-    "hypercorn>=0.16.0",
-    "dishka>=1.3.0",
-    "quart-dishka>=1.3.0",
-    "aiohttp>=3.9.0",
-    "pydantic>=2.0.0",
-    "pydantic-settings>=2.0.0",
+    "quart",
+    "hypercorn",
+    "dishka",
+    "quart-dishka",
+    "aiohttp",
+    "pydantic",
+    "pydantic-settings",
     "huleedu-common-core",
-    "prometheus-client>=0.19.0",
+    "huleedu-service-libs",
+    "prometheus-client",
 ]
 readme = "README.md"
 requires-python = ">=3.11"
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=7.0.0",
-    "pytest-asyncio>=0.21.0",
-    "pytest-mock>=3.10.0",
-    "httpx>=0.24.0",
-    "respx>=0.20.0",
+    "pytest",
+    "pytest-asyncio",
+    "pytest-mock",
+    "httpx",
+    "respx",
 ]
+
+[tool.pdm.resolution.overrides]
+huleedu-common-core = "file:///app/common_core"
+huleedu-service-libs = "file:///app/services/libs"
 
 [build-system]
 requires = ["pdm-backend"]
@@ -49,7 +54,6 @@ target-version = "py311"
 
 [tool.ruff.lint]
 select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "ICN", "PIE", "T20", "Q"]
-ignore = ["E501"]  # Line too long (handled by formatter)
 
 [tool.ruff.lint.isort]
 known-first-party = ["services", "common_core", "huleedu_service_libs"]
