Enhance Batch Conductor and Orchestrator Services with Client Pipeline Request Handling
This commit introduces significant improvements to the Batch Conductor and Orchestrator services, focusing on the integration of the ClientBatchPipelineRequestV1 event handling. Key changes include the addition of a new `ClientPipelineRequestHandler` for processing client requests, which coordinates with the Batch Conductor Service (BCS) for pipeline resolution. The Docker Compose configuration has been updated to include Redis URL settings for improved service communication.

Furthermore, the commit enhances the architectural structure by implementing a new `BatchConductorClientImpl` for HTTP communication with BCS, ensuring robust error handling and logging. Comprehensive integration tests have been added to validate the complete pipeline resolution workflow, confirming that all components interact correctly and efficiently.

All relevant tests have been executed successfully, ensuring high code quality and no regressions in functionality.

--- a/services/batch_conductor_service/pyproject.toml
+++ b/services/batch_conductor_service/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "aiohttp",
     "pydantic",
     "pydantic-settings",
+    "pyyaml",
     "huleedu-common-core",
     "huleedu-service-libs",
     "prometheus-client",
