--- a/docker-compose.services.yml
+++ b/docker-compose.services.yml
@@ -73,6 +73,7 @@ services:
       - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
       - LOG_LEVEL=INFO
       - HTTP_PORT=4002
+      - BCS_REDIS_URL=redis://redis:6379
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:4002/healthz || exit 1"]
       interval: 15s
