pdate CHANGELOG and pyproject.toml for Sprint 1 Enhancements
This commit updates the CHANGELOG to reflect the completion of Sprint 1, highlighting new features, changes, and fixes. Key updates include:

- Added sections for features, changes, and fixes specific to Sprint 1, including CI/CD infrastructure, event schema evolution, and critical architecture improvements.
- Updated documentation to clarify the architecture and API interactions.
- Included a new rule file for the Batch Conductor Service, detailing its architecture and implementation.

Additionally, the  file has been modified to include the  module for improved documentation handling. All relevant tests have been executed successfully, ensuring high code quality and no regressions in functionality.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -167,6 +167,7 @@ module = [
     "enums_db",       # Database enum module without type stubs
     "models_db",      # Database models module without type stubs
     "yaml.*",       # PyYAML stubs
+    "pypandoc.*",   # pypandoc lacks type stubs
 ]
 ignore_missing_imports = true
 
@@ -203,6 +204,7 @@ module = [
 ignore_missing_imports = true
 
 [tool.pytest.ini_options]
+
 testpaths = [
     "common_core/tests",
     "services/content_service/tests",
