feat: implement observability stack with Prometheus, Loki, and shared metrics pattern across services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,4 +17,5 @@ volumes:
 include:
   - docker-compose.infrastructure.yml
   - docker-compose.services.yml
+  - docker-compose.observability.yml
     # Note: cj_assessment_service is a worker service with metrics endpoint only 
