--- a/docker-compose.services.yml
+++ b/docker-compose.services.yml
@@ -43,6 +43,7 @@ services:
       - huleedu_content_store_data:/data/huleedu_content_store
     environment:
       - ENV_TYPE=docker
+      - ENVIRONMENT=production
       - CONTENT_STORE_ROOT_PATH=/data/huleedu_content_store
       - PORT=8000
       - LOG_LEVEL=INFO
@@ -70,6 +71,7 @@ services:
       - "4002:4002"
     environment:
       - ENV_TYPE=docker
+      - ENVIRONMENT=production
       - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
       - LOG_LEVEL=INFO
       - HTTP_PORT=4002
@@ -100,6 +102,7 @@ services:
       - "8002:8002"
     environment:
       - ENV_TYPE=docker
+      - ENVIRONMENT=production
       - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
       - CONTENT_SERVICE_URL=http://content_service:8000/v1/content
       - LOG_LEVEL=DEBUG
@@ -135,6 +138,7 @@ services:
       - "5001:5000"
     environment:
       - ENV_TYPE=docker
+      - ENVIRONMENT=production
       - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
       - CONTENT_SERVICE_URL=http://content_service:8000/v1/content
       - BATCH_ORCHESTRATOR_SERVICE_PORT=5000
@@ -175,14 +179,13 @@ services:
       - huleedu_internal_network
     ports:
       - "6001:6000"
-      - "9091:9090"
     environment:
       - ENV_TYPE=docker
+      - ENVIRONMENT=production
       - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
       - CONTENT_SERVICE_URL=http://content_service:8000/v1/content
       - ESSAY_LIFECYCLE_SERVICE_HTTP_PORT=6000
-      - ESSAY_LIFECYCLE_SERVICE_PROMETHEUS_PORT=9090
-      - ESSAY_LIFECYCLE_SERVICE_USE_MOCK_REPOSITORY=false  # Use PostgreSQL in production
+      - ESSAY_LIFECYCLE_SERVICE_USE_MOCK_REPOSITORY=false
       - ESSAY_LIFECYCLE_SERVICE_DATABASE_PATH=/data/essay_lifecycle/essay_lifecycle.db
       # PostgreSQL configuration
       - ELS_DATABASE_URL=postgresql+asyncpg://${HULEEDU_DB_USER}:${HULEEDU_DB_PASSWORD}@essay_lifecycle_db:5432/essay_lifecycle
@@ -224,7 +227,7 @@ services:
       - ENV_TYPE=docker
       - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
       - CONTENT_SERVICE_URL=http://content_service:8000/v1/content
-      - ESSAY_LIFECYCLE_SERVICE_USE_MOCK_REPOSITORY=false  # Use PostgreSQL in production
+      - ESSAY_LIFECYCLE_SERVICE_USE_MOCK_REPOSITORY=false
       - ESSAY_LIFECYCLE_SERVICE_DATABASE_PATH=/data/essay_lifecycle/essay_lifecycle.db
       # PostgreSQL configuration
       - ELS_DATABASE_URL=postgresql+asyncpg://${HULEEDU_DB_USER}:${HULEEDU_DB_PASSWORD}@essay_lifecycle_db:5432/essay_lifecycle
@@ -252,13 +255,12 @@ services:
       - huleedu_internal_network
     ports:
       - "7001:7001"
-      - "9094:9094"
     environment:
       - ENV_TYPE=docker
+      - ENVIRONMENT=production
       - FILE_SERVICE_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
       - FILE_SERVICE_CONTENT_SERVICE_URL=http://content_service:8000/v1/content
       - FILE_SERVICE_HTTP_PORT=7001
-      - FILE_SERVICE_PROMETHEUS_PORT=9094
       - FILE_SERVICE_HOST=0.0.0.0
       - FILE_SERVICE_LOG_LEVEL=INFO 
     healthcheck:
@@ -286,9 +288,10 @@ services:
     networks:
       - huleedu_internal_network
     ports:
-      - "9095:9090"  # Metrics port
+      - "9095:9090"
     environment:
       - ENV_TYPE=docker
+      - ENVIRONMENT=production
       - CJ_ASSESSMENT_SERVICE_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
       - CJ_ASSESSMENT_SERVICE_CONTENT_SERVICE_URL=http://content_service:8000/v1/content
       - CJ_ASSESSMENT_SERVICE_LOG_LEVEL=INFO
