fix: update workflows and documentation for API Gateway and Batch Orchestrator Service
- Changed the GitHub Actions workflow to prevent automatic runs on the main branch by setting the branches to [none].
- Revised the implementation guide for the HuleEdu Client Interface Layer, removing references to the "thin event" pattern and updating to the "query pattern" for clarity.
- Enhanced the documentation for the Batch Orchestrator Service, detailing the new internal API endpoint for retrieving the complete pipeline processing state.
- Added an internal API blueprint for service-to-service communication, ensuring proper logging and error handling.

These changes improve the clarity of the implementation documentation and ensure that workflows are correctly configured for the development process.

--- a/.github/workflows/walking-skeleton-smoke-test.yml
+++ b/.github/workflows/walking-skeleton-smoke-test.yml
@@ -2,9 +2,9 @@ name: Walking Skeleton Smoke Test
 
 on:
   push:
-    branches: [ main ]      # Auto-run on pushes to main 
+    branches: [ none ]      # Auto-run on pushes to main 
   pull_request:
-    branches: [ main ]      # Auto-run on PRs to main
+    branches: [ none ]      # Auto-run on PRs to main
   workflow_dispatch:        # Manual trigger anytime
 
 jobs:
