--- a/docker-compose.observability.yml
+++ b/docker-compose.observability.yml
@@ -91,7 +91,8 @@ services:
     volumes:
       - grafana_data:/var/lib/grafana
     environment:
-      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD:-admin}
       - GF_USERS_ALLOW_SIGN_UP=false
       - GF_DATASOURCES_0_NAME=Prometheus
       - GF_DATASOURCES_0_TYPE=prometheus
