feat: add Class Management Service with initial implementation
- Introduced the Class Management Service, which includes functionality for managing classes and students within the HuleEdu platform.
- Implemented core components such as API models, database models, and service logic, adhering to the established architectural patterns.
- Added support for class and student creation, updates, and associations, along with event publishing for class and student events.
- Integrated the service into the Docker Compose orchestration for operational readiness.
- Comprehensive documentation and tests have been established to ensure reliability and maintainability.

This addition enhances the overall functionality of the HuleEdu platform, providing essential capabilities for class and student management.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,8 @@ dev = [
     "-e file:///${PROJECT_ROOT}/services/batch_orchestrator_service",
     "-e file:///${PROJECT_ROOT}/services/essay_lifecycle_service",
     "-e file:///${PROJECT_ROOT}/services/file_service",
-    "-e file:///${PROJECT_ROOT}/services/cj_assessment_service"
+    "-e file:///${PROJECT_ROOT}/services/cj_assessment_service",
+    "-e file:///${PROJECT_ROOT}/services/class_management_service"
 ]
 
 [tool.pdm.scripts]
@@ -157,6 +158,8 @@ module = [
     "services.batch_orchestrator_service.*",
     "services.essay_lifecycle_service.*",
     "services.file_service.*",
+    "services.cj_assessment_service.*",
+    "services.class_management_service.*",
 ]
 ignore_missing_imports = false
 disallow_untyped_defs = true
