feat: implement Class Management Service with API and database integration
- Added the Class Management Service, enabling management of classes and students within the HuleEdu platform.
- Implemented API routes for creating, retrieving, updating, and deleting classes and students, adhering to established architectural patterns.
- Integrated PostgreSQL database support with Alembic for migrations and event publishing for class and student updates.
- Enhanced Docker Compose configuration to include the new service and its dependencies.
- Comprehensive unit and integration tests have been added to ensure functionality and reliability.

This implementation significantly enhances the HuleEdu platform's capabilities for educational management.

--- a/docker-compose.infrastructure.yml
+++ b/docker-compose.infrastructure.yml
@@ -66,6 +66,27 @@ services:
       retries: 5
       start_period: 30s
 
+  class_management_db:
+    image: postgres:15
+    container_name: huleedu_class_management_db
+    restart: unless-stopped
+    networks:
+      - huleedu_internal_network
+    ports:
+      - "5435:5432"
+    environment:
+      - POSTGRES_DB=huledu_class_management
+      - POSTGRES_USER=${HULEEDU_DB_USER}
+      - POSTGRES_PASSWORD=${HULEEDU_DB_PASSWORD}
+    volumes:
+      - class_management_db_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${HULEEDU_DB_USER} -d huledu_class_management"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+
   # Redis cache for idempotency and session management
   redis:
     image: redis:7-alpine
