feat: implement dependency injection and metrics infrastructure with Dishka

--- a/services/class_management_service/Dockerfile
+++ b/services/class_management_service/Dockerfile
@@ -17,23 +17,27 @@ RUN apt-get update && apt-get install -y --no-install-recommends curl && \
     rm -rf /var/lib/apt/lists/* && \
     pip install --no-cache-dir pdm
 
-# Copy relevant parts of the monorepo for PDM to resolve local packages
-COPY pyproject.toml pdm.lock /app/
+# Copy shared local dependencies first
 COPY common_core/ /app/common_core/
 COPY services/libs/ /app/services/libs/
+
+# Now, handle the specific service
 COPY services/class_management_service/ /app/services/class_management_service/
 
-# Install dependencies from the monorepo root
-# PDM needs access to the root pyproject.toml and pdm.lock to resolve local packages
+# Set working directory to the service
+WORKDIR /app/services/class_management_service
+
+# Install dependencies for the class_management_service using its own pyproject.toml
 RUN pdm install --prod
 
-# Setup user and permissions
+# Setup user and permissions. Note: chown needs to be run as root.
+USER root
 RUN groupadd -r appuser && useradd --no-log-init -r -g appuser appuser && \
     chown -R appuser:appuser /app
 USER appuser
 
 EXPOSE ${CLASS_MANAGEMENT_SERVICE_PORT}
 
-# Run the service from its own directory
-CMD ["pdm", "run", "python", "services/class_management_service/app.py"]
+# Command to run the application from the service directory
+CMD ["pdm", "run", "start"]
 
