feat: add pre-commit hooks and simplify rules sync script by removing frontmatter handling

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ cj_ai_essay_assessment/*.xml
 /*.xml
 
 # Service data directories
-scripts/utils
+scripts/utils/md-to-html-converter
 services/spell_checker_service/data/corrected_essays
 data/corrected_essays
 test_uploads/
