--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,20 +8,6 @@ repos:
         name: Sync Rules from .mdc to .md
         entry: python scripts/utils/sync_rules.py
         language: python
-        files: '^(.*\.mdc|\.windsurf/rules/.*\.md)$'
+        always_run: true
+        pass_filenames: false
         stages: [pre-commit]
-        pass_filenames: false # We run the script on the whole directory, not per-file
-
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
-    hooks:
-    -   id: check-yaml
-    -   id: end-of-file-fixer
-    -   id: trailing-whitespace
-
--   repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.12.0
-    hooks:
-    -   id: ruff
-        args: [--fix, --exit-non-zero-on-fix]
-    -   id: ruff-format
