--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,9 +6,8 @@ repos:
     hooks:
     -   id: sync-rules
         name: Sync Rules from .mdc to .md
-        entry: echo
-        language: system
-        verbose: true
+        entry: python scripts/utils/sync_rules.py
+        language: python
         always_run: true
         pass_filenames: false
         stages: [pre-commit]
