--- a/services/api_gateway_service/pyproject.toml
+++ b/services/api_gateway_service/pyproject.toml
@@ -6,27 +6,30 @@ authors = [
     { name = "HuleEdu Team", email = "dev@huleedu.com" }
 ]
 dependencies = [
-    "fastapi>=0.104.0",
-    "uvicorn[standard]>=0.24.0",
-    "dishka>=1.3.0",
-    "dishka[fastapi]>=1.3.0",
-    "pydantic>=2.0.0",
-    "pydantic-settings>=2.0.0",
+    "fastapi",
+    "uvicorn",
+    "dishka",
+    "dishka[fastapi]",
+    "pydantic",
+    "pydantic-settings",
     "huleedu-common-core",
     "huleedu-service-libs",
-    "prometheus-client>=0.19.0",
-    "slowapi>=0.1.8",  # Rate limiting
+    "prometheus-client",
+    "python-multipart",
+    "slowapi",  # Rate limiting
+    "python-jose[cryptography]", # For JWT
+    "passlib[bcrypt]"           # For password hashing (future)
 ]
 readme = "README.md"
 requires-python = ">=3.11"
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=7.0.0",
-    "pytest-asyncio>=0.21.0",
-    "pytest-mock>=3.10.0",
-    "httpx>=0.24.0",
-    "respx>=0.20.0",
+    "pytest",
+    "pytest-asyncio",
+    "pytest-mock",
+    "httpx",
+    "respx",
 ]
 
 [build-system]
