--- a/docker-compose.services.yml
+++ b/docker-compose.services.yml
@@ -54,6 +54,45 @@ services:
       retries: 3
       start_period: 20s
 
+  result_aggregator_service:
+    build:
+      context: .
+      dockerfile: services/result_aggregator_service/Dockerfile
+    container_name: huleedu_result_aggregator
+    restart: unless-stopped
+    depends_on:
+      kafka_topic_setup:
+        condition: service_completed_successfully
+      result_aggregator_db:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    networks:
+      - huleedu_internal_network
+    ports:
+      - "4003:4003"  # API port
+      - "9096:9096"  # Metrics port
+    environment:
+      - ENV_TYPE=docker
+      - ENVIRONMENT=production
+      - DATABASE_URL=postgresql+asyncpg://${HULEEDU_DB_USER}:${HULEEDU_DB_PASSWORD}@result_aggregator_db:5432/result_aggregator
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - REDIS_URL=redis://redis:6379
+      - INTERNAL_API_KEY=${HULEEDU_INTERNAL_API_KEY}
+      - LOG_LEVEL=INFO
+      - SERVICE_NAME=result-aggregator-service
+      - HOST=0.0.0.0
+      - PORT=4003
+      - METRICS_PORT=9096
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:4003/healthz || exit 1"]
+      interval: 15s
+      timeout: 5s
+      retries: 3
+      start_period: 20s
+
   batch_conductor_service:
     build:
       context: .
@@ -78,6 +117,45 @@ services:
       - BCS_REDIS_URL=redis://redis:6379
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:4002/healthz || exit 1"]
+      interval: 15s
+      timeout: 5s
+      retries: 3
+      start_period: 20s
+
+  result_aggregator_service:
+    build:
+      context: .
+      dockerfile: services/result_aggregator_service/Dockerfile
+    container_name: huleedu_result_aggregator
+    restart: unless-stopped
+    depends_on:
+      kafka_topic_setup:
+        condition: service_completed_successfully
+      result_aggregator_db:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    networks:
+      - huleedu_internal_network
+    ports:
+      - "4003:4003"  # API port
+      - "9096:9096"  # Metrics port
+    environment:
+      - ENV_TYPE=docker
+      - ENVIRONMENT=production
+      - DATABASE_URL=postgresql+asyncpg://${HULEEDU_DB_USER}:${HULEEDU_DB_PASSWORD}@result_aggregator_db:5432/result_aggregator
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - REDIS_URL=redis://redis:6379
+      - INTERNAL_API_KEY=${HULEEDU_INTERNAL_API_KEY}
+      - LOG_LEVEL=INFO
+      - SERVICE_NAME=result-aggregator-service
+      - HOST=0.0.0.0
+      - PORT=4003
+      - METRICS_PORT=9096
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:4003/healthz || exit 1"]
       interval: 15s
       timeout: 5s
       retries: 3
@@ -110,6 +188,45 @@ services:
       - SPELL_CHECKER_SERVICE_REDIS_URL=redis://redis:6379
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8002/healthz || exit 1"]
+      interval: 15s
+      timeout: 5s
+      retries: 3
+      start_period: 20s
+
+  result_aggregator_service:
+    build:
+      context: .
+      dockerfile: services/result_aggregator_service/Dockerfile
+    container_name: huleedu_result_aggregator
+    restart: unless-stopped
+    depends_on:
+      kafka_topic_setup:
+        condition: service_completed_successfully
+      result_aggregator_db:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    networks:
+      - huleedu_internal_network
+    ports:
+      - "4003:4003"  # API port
+      - "9096:9096"  # Metrics port
+    environment:
+      - ENV_TYPE=docker
+      - ENVIRONMENT=production
+      - DATABASE_URL=postgresql+asyncpg://${HULEEDU_DB_USER}:${HULEEDU_DB_PASSWORD}@result_aggregator_db:5432/result_aggregator
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - REDIS_URL=redis://redis:6379
+      - INTERNAL_API_KEY=${HULEEDU_INTERNAL_API_KEY}
+      - LOG_LEVEL=INFO
+      - SERVICE_NAME=result-aggregator-service
+      - HOST=0.0.0.0
+      - PORT=4003
+      - METRICS_PORT=9096
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:4003/healthz || exit 1"]
       interval: 15s
       timeout: 5s
       retries: 3
@@ -157,6 +274,45 @@ services:
       retries: 3
       start_period: 20s
 
+  result_aggregator_service:
+    build:
+      context: .
+      dockerfile: services/result_aggregator_service/Dockerfile
+    container_name: huleedu_result_aggregator
+    restart: unless-stopped
+    depends_on:
+      kafka_topic_setup:
+        condition: service_completed_successfully
+      result_aggregator_db:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    networks:
+      - huleedu_internal_network
+    ports:
+      - "4003:4003"  # API port
+      - "9096:9096"  # Metrics port
+    environment:
+      - ENV_TYPE=docker
+      - ENVIRONMENT=production
+      - DATABASE_URL=postgresql+asyncpg://${HULEEDU_DB_USER}:${HULEEDU_DB_PASSWORD}@result_aggregator_db:5432/result_aggregator
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - REDIS_URL=redis://redis:6379
+      - INTERNAL_API_KEY=${HULEEDU_INTERNAL_API_KEY}
+      - LOG_LEVEL=INFO
+      - SERVICE_NAME=result-aggregator-service
+      - HOST=0.0.0.0
+      - PORT=4003
+      - METRICS_PORT=9096
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:4003/healthz || exit 1"]
+      interval: 15s
+      timeout: 5s
+      retries: 3
+      start_period: 20s
+
   essay_lifecycle_api:
     build:
       context: .
@@ -198,6 +354,45 @@ services:
       - ESSAY_LIFECYCLE_SERVICE_REDIS_URL=redis://redis:6379
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:6000/healthz || exit 1"]
+      interval: 15s
+      timeout: 5s
+      retries: 3
+      start_period: 20s
+
+  result_aggregator_service:
+    build:
+      context: .
+      dockerfile: services/result_aggregator_service/Dockerfile
+    container_name: huleedu_result_aggregator
+    restart: unless-stopped
+    depends_on:
+      kafka_topic_setup:
+        condition: service_completed_successfully
+      result_aggregator_db:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    networks:
+      - huleedu_internal_network
+    ports:
+      - "4003:4003"  # API port
+      - "9096:9096"  # Metrics port
+    environment:
+      - ENV_TYPE=docker
+      - ENVIRONMENT=production
+      - DATABASE_URL=postgresql+asyncpg://${HULEEDU_DB_USER}:${HULEEDU_DB_PASSWORD}@result_aggregator_db:5432/result_aggregator
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - REDIS_URL=redis://redis:6379
+      - INTERNAL_API_KEY=${HULEEDU_INTERNAL_API_KEY}
+      - LOG_LEVEL=INFO
+      - SERVICE_NAME=result-aggregator-service
+      - HOST=0.0.0.0
+      - PORT=4003
+      - METRICS_PORT=9096
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:4003/healthz || exit 1"]
       interval: 15s
       timeout: 5s
       retries: 3
@@ -273,6 +468,45 @@ services:
       retries: 3
       start_period: 20s
 
+  result_aggregator_service:
+    build:
+      context: .
+      dockerfile: services/result_aggregator_service/Dockerfile
+    container_name: huleedu_result_aggregator
+    restart: unless-stopped
+    depends_on:
+      kafka_topic_setup:
+        condition: service_completed_successfully
+      result_aggregator_db:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    networks:
+      - huleedu_internal_network
+    ports:
+      - "4003:4003"  # API port
+      - "9096:9096"  # Metrics port
+    environment:
+      - ENV_TYPE=docker
+      - ENVIRONMENT=production
+      - DATABASE_URL=postgresql+asyncpg://${HULEEDU_DB_USER}:${HULEEDU_DB_PASSWORD}@result_aggregator_db:5432/result_aggregator
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - REDIS_URL=redis://redis:6379
+      - INTERNAL_API_KEY=${HULEEDU_INTERNAL_API_KEY}
+      - LOG_LEVEL=INFO
+      - SERVICE_NAME=result-aggregator-service
+      - HOST=0.0.0.0
+      - PORT=4003
+      - METRICS_PORT=9096
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:4003/healthz || exit 1"]
+      interval: 15s
+      timeout: 5s
+      retries: 3
+      start_period: 20s
+
   cj_assessment_service:
     build:
       context: .
@@ -311,6 +545,45 @@ services:
       - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:9090/healthz || exit 1"]
+      interval: 15s
+      timeout: 5s
+      retries: 3
+      start_period: 20s
+
+  result_aggregator_service:
+    build:
+      context: .
+      dockerfile: services/result_aggregator_service/Dockerfile
+    container_name: huleedu_result_aggregator
+    restart: unless-stopped
+    depends_on:
+      kafka_topic_setup:
+        condition: service_completed_successfully
+      result_aggregator_db:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    networks:
+      - huleedu_internal_network
+    ports:
+      - "4003:4003"  # API port
+      - "9096:9096"  # Metrics port
+    environment:
+      - ENV_TYPE=docker
+      - ENVIRONMENT=production
+      - DATABASE_URL=postgresql+asyncpg://${HULEEDU_DB_USER}:${HULEEDU_DB_PASSWORD}@result_aggregator_db:5432/result_aggregator
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - REDIS_URL=redis://redis:6379
+      - INTERNAL_API_KEY=${HULEEDU_INTERNAL_API_KEY}
+      - LOG_LEVEL=INFO
+      - SERVICE_NAME=result-aggregator-service
+      - HOST=0.0.0.0
+      - PORT=4003
+      - METRICS_PORT=9096
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:4003/healthz || exit 1"]
       interval: 15s
       timeout: 5s
       retries: 3
@@ -356,6 +629,45 @@ services:
       retries: 3
       start_period: 20s
 
+  result_aggregator_service:
+    build:
+      context: .
+      dockerfile: services/result_aggregator_service/Dockerfile
+    container_name: huleedu_result_aggregator
+    restart: unless-stopped
+    depends_on:
+      kafka_topic_setup:
+        condition: service_completed_successfully
+      result_aggregator_db:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    networks:
+      - huleedu_internal_network
+    ports:
+      - "4003:4003"  # API port
+      - "9096:9096"  # Metrics port
+    environment:
+      - ENV_TYPE=docker
+      - ENVIRONMENT=production
+      - DATABASE_URL=postgresql+asyncpg://${HULEEDU_DB_USER}:${HULEEDU_DB_PASSWORD}@result_aggregator_db:5432/result_aggregator
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - REDIS_URL=redis://redis:6379
+      - INTERNAL_API_KEY=${HULEEDU_INTERNAL_API_KEY}
+      - LOG_LEVEL=INFO
+      - SERVICE_NAME=result-aggregator-service
+      - HOST=0.0.0.0
+      - PORT=4003
+      - METRICS_PORT=9096
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:4003/healthz || exit 1"]
+      interval: 15s
+      timeout: 5s
+      retries: 3
+      start_period: 20s
+
   class_management_service:
     build:
       context: .
@@ -386,6 +698,45 @@ services:
       - CLASS_MANAGEMENT_SERVICE_REDIS_URL=redis://redis:6379
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:5002/healthz || exit 1"]
+      interval: 15s
+      timeout: 5s
+      retries: 3
+      start_period: 20s
+
+  result_aggregator_service:
+    build:
+      context: .
+      dockerfile: services/result_aggregator_service/Dockerfile
+    container_name: huleedu_result_aggregator
+    restart: unless-stopped
+    depends_on:
+      kafka_topic_setup:
+        condition: service_completed_successfully
+      result_aggregator_db:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    networks:
+      - huleedu_internal_network
+    ports:
+      - "4003:4003"  # API port
+      - "9096:9096"  # Metrics port
+    environment:
+      - ENV_TYPE=docker
+      - ENVIRONMENT=production
+      - DATABASE_URL=postgresql+asyncpg://${HULEEDU_DB_USER}:${HULEEDU_DB_PASSWORD}@result_aggregator_db:5432/result_aggregator
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - REDIS_URL=redis://redis:6379
+      - INTERNAL_API_KEY=${HULEEDU_INTERNAL_API_KEY}
+      - LOG_LEVEL=INFO
+      - SERVICE_NAME=result-aggregator-service
+      - HOST=0.0.0.0
+      - PORT=4003
+      - METRICS_PORT=9096
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:4003/healthz || exit 1"]
       interval: 15s
       timeout: 5s
       retries: 3
