--- a/services/result_aggregator_service/pyproject.toml
+++ b/services/result_aggregator_service/pyproject.toml
@@ -1,51 +1,45 @@
 [project]
 name = "result-aggregator-service"
-version = "1.0.0"
-description = "Result Aggregator Service for HuleEdu Platform"
+version = "0.1.0"
+description = "Service to aggregate and query batch processing results."
 authors = [
-    { name = "HuleEdu Team", email = "team@huleedu.com" },
+    {name = "Olof Larsson", email = "paunchygent@gmail.com"},
 ]
-readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "quart",
-    "quart-cors",
     "pydantic",
-    "pydantic-settings",
-    "sqlalchemy",
-    "asyncpg",
-    "aiohttp",
+    "dishka",
+    "quart-dishka",
     "aiokafka",
     "redis",
-    "prometheus-client",
-    "dishka",
-    "python-dotenv",
-    "common-core @ file:///${PROJECT_ROOT}/common_core",
-    "huleedu-service-libs @ file:///${PROJECT_ROOT}/services/libs",
+    "structlog",
+    "python-json-logger",
+    "opentelemetry-api",
+    "opentelemetry-sdk",
+    "opentelemetry-instrumentation-asgi",
+    "opentelemetry-exporter-otlp-proto-http",
+    "uvicorn",
+    "huleedu-service-libs"
 ]
-
-[project.optional-dependencies]
-dev = [
-    "pytest",
-    "pytest-asyncio",
-    "pytest-mock",
-    "pytest-cov",
-    "httpx",
-    "respx",
-]
-
-[tool.pdm]
-distribution = false
-
-[tool.pdm.scripts]
-dev = "python -m services.result_aggregator_service.app"
-test = "pytest tests/"
-test-unit = "pytest tests/unit/"
-test-integration = "pytest tests/integration/"
-format = "ruff format ."
-lint = "ruff check ."
-typecheck = "mypy ."
 
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
+
+[tool.pdm]
+distribution = false
+
+[tool.pdm.overrides]
+"huleedu-service-libs" = {"path" = "../libs", "editable" = true}
+
+[project.optional-dependencies]
+development = [
+    "pytest",
+    "pytest-asyncio",
+    "httpx",
+    "flake8",
+    "mypy",
+    "black",
+    "isort",
+]
